<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <CalendarView
        android:id="@+id/calenterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_appntm"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/calenterView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createBtn"
        android:text="@string/edit_view"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/delBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editView"
        android:text="@string/del"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="355dp" />
    <Button
        android:id="@+id/moveApptnmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/delBtn"
        android:text="@string/move"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="403dp" />

    <Button
        android:id="@+id/searchApptnmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/moveApptnmt"
        android:text="@string/search"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="451dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>
