<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dateCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateCal"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="7dp" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/textInput"
        app:layout_constraintTop_toBottomOf="@id/dateCal"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/timeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/timeInput"
        app:layout_constraintTop_toBottomOf="@id/textInput"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/timeSetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timeInput"
        android:text="@string/timeSetter"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="139dp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timeSetter"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/detailText"
                android:layout_width="350sp"
                android:layout_height="200sp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:hint="Details"
                app:layout_constraintTop_toBottomOf="@id/timeSetter"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="206dp" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/detailText"
                android:text="Save"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="447dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>